[RED] Make tests for ProfileService